# rust_learnings

./: .gitignore  Cargo.toml  one.txt
closures_again/: Cargo.toml
closures_again/src/: main.rs
contacts_miniproject/: Cargo.toml
contacts_miniproject/src/: contact.rs  main.rs  manager.rs
enum_practice/src/: main.rs
error_handling_sandbox/: Cargo.toml
error_handling_sandbox/src/: main.rs
fearless_concurrency/src/: main.rs
fund_async/: Cargo.toml
fund_async/src/: main.rs
grade_calculator/src/: main.rs
iterators_closures/src/: main.rs
lazy_calculator/: Cargo.toml
lazy_calculator/src/: main.rs
library_mini_project/: Cargo.toml
library_mini_project/src/: main.rs
lifetimes_practice/src/: main.rs
ownership_sandbox/: Cargo.toml
ownership_sandbox/src/: library.rs  main.rs  messages.rs
pattern_matching/src/: main.rs
payment_processing_traits/: Cargo.toml
payment_processing_traits/src/: main.rs
slices_practice/src/: main.rs
smart_ptrs/src/: main.rs
strcuts_practice/: Cargo.toml
strcuts_practice/src/: main.rs
students_grade_manager/: Cargo.toml
students_grade_manager/src/: main.rs
traits/src/: main.rs
